--- a/session_8/Bayesian_statistics_8.Rmd
+++ b/session_8/Bayesian_statistics_8.Rmd
@@ -84,18 +84,37 @@ aka Beverton-Holt model.
 
 Observational noise
 
-\[ N_t = \frac{N_t e^{r}}{1+N_t(e^{r}-1)/K} + \epsilon_t, \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+\[ y_{t+1} = N_{t+1} + \epsilon_t, \; N_t = \frac{N_t e^{r}}{1+N_t(e^{r}-1)/K} \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
 
 >- The effect of $\epsilon_t$ does not accumulate. $\epsilon_1$ does not affect $N_8$. 
 
 \onslide<2->
 Process noise
 
-\[ N_t = \frac{N_t e^{r+\epsilon_t}}{1+N_t(e^{r}-1)/K}, \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+\[ N_{t+1} = \frac{N_t e^{r+\epsilon_t}}{1+N_t(e^{r}-1)/K}, \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
 
 >- The effect of $\epsilon_t$ does accumulate. $\epsilon_1$ *does* affect $N_8$. 
->- Creates *autocorrelation* between $N_t$ values
+>- *autocorrelation* between $N_t$ values. This is a *time series* model
 >- Of course in real life you can have both (and sometimes it is hard to distinguish between the two)
+
+## Transforming this into a model we can fit 
+
+We need to have $y_t \sim \mathcal{D}([\text{something}])$ to be able to fit a model in jags -- the data must be observed. 
+\onslide<1->
+Let's take $y_t = \ln(N_t)$. Then the previous model writes
+
+\[ y_{t+1} = y_t + r + \epsilon_t - \ln(1+\alpha N_t), \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+with $\alpha = (e^{r}-1)/K$. 
+
+\onslide<2-> Or again
+\[ y_{t+1} = y_t + r + \epsilon_t - \ln(1+\alpha e^{y_t}), \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+
+\onslide<3-> This equivalent to 
+\[ y_{t+1} = f(y_t) + \epsilon_t \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+or again $y_{t+1}|y_t \sim \mathcal{N}(f(y_t),\sigma^2)$. We have our distribution! 
+
+
+
 
 ## Fitting the logistic model in discrete-time with process noise { .allowframebreaks }
 
