--- a/session_8/Bayesian_statistics_8.Rmd
+++ b/session_8/Bayesian_statistics_8.Rmd
@@ -84,7 +84,7 @@ aka Beverton-Holt model.
 
 Observational noise
 
-\[ y_{t+1} = N_{t+1} + \epsilon_t, \; N_t = \frac{N_t e^{r}}{1+N_t(e^{r}-1)/K} \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
+\[ y_{t+1} = N_{t+1} + \epsilon_t, \; N_{t+1} = \frac{N_t e^{r}}{1+N_t(e^{r}-1)/K}, \; \epsilon_t \sim \mathcal{N}(0,\sigma^2) \text{ i.i.d}\]
 
 >- The effect of $\epsilon_t$ does not accumulate. $\epsilon_1$ does not affect $N_8$. 
 
@@ -218,7 +218,7 @@ ggs_pairs(S)
 
 ## How to interpret correlations in the posteriors
 
->- Makes some parameters difficult to interpret independently
+>- Make some parameters difficult to interpret independently
 >- Here $r$ is correlated to $\alpha$ but not really to $K$ despite the fact that the formula $K$ includes $r$ in our JAGS code
 >- To maintain a nice curve that goes through the point cloud, $r$ must be correlated with $\alpha$. 
 >- We'll see another example of this in the practical
